Ensured no divs are rendered that are not visible

--- a/src/css/notificationFeed.css
+++ b/src/css/notificationFeed.css
@@ -4,8 +4,9 @@
     border: 2px solid black;
     border-radius: 10px;
     overflow-y: auto;
-    padding: 20px;
     width: 45%;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 50px;
 }
 
